# Spark-pulser

./: .gitattributes  LICENSE-OVERVIEW.md  README.md  THIRD_PARTY_LICENSES.txt
assy/: duct.FCStd  mock-fan.FCStd  mock-heatsink.FCStd  mock-pcb.FCStd  pcb-assy.FCStd
docs/: board-spec.md  builder-Octopus.md  builder-PULSER.md  builder-README-CTRL-MINI-ED.md  hc.md  hv.md  i2c-registers.md  operation.md  pulser.md  spec-CORE.md  spec-CTRL-MINI-ED.md  spec-CTRL-MINI.md  spec-PULSER.md  spec-g-code.md  spec-spooler.md  user-CORE.md  user-PULSER.md  user-README-CTRL-MINI-ED.md  user-README-CTRL-MINI.md  user-manual.md
firmware/: config.h  main.c
firmware-ctrl/: .gitignore  Makefile  config.h  main.c
firmware-test-hv/: Makefile  main.c
firmware-test-integ/: CMakeLists.txt  build.sh  config.h  main.c  setup.sh
firmware/CORE/: CMakeLists.txt  CORE.code-workspace  config.h  ed.c  ed.h  main.c  md.c  md.h  pulser.c  pulser.h  stpdrv.c  stpdrv.h  xmodem.c  xmodem.h
firmware/CTRL-MINI/: CMakeLists.txt  config.h  ed.c  ed.h  main.c  md.c
firmware/CTRL-MINI-ED/: CMakeLists.txt  CTRL-MINI-ED.code-workspace  config.h  main.c  md.h
firmware/PULSER/: CMakeLists.txt  PULSER.code-workspace  config.h  main.c
pcb/: .gitignore  LICENSE  unit.md
pcb/CORE/: CORE.kicad_pcb  CORE.kicad_sch  fabrication-toolkit-options.json
pcb/CTRL-MINI-ED/: CTRL-MINI-ED.kicad_pcb  CTRL-MINI-ED.kicad_pro  CTRL-MINI-ED.kicad_sch  boost_converter_100v.kicad_sch  (+7 more)
pcb/CTRL-MINI-ED-sim-dchg/: AD8397.lib  sym-lib-table
pcb/CTRL-MINI-ED-sim-sense/: CTRL-MINI-ED-sim-sense.kicad_sch
(+110 files in other folders)
